tests/e2e/macro_expand/snapshots/e2e__macro_expand__simple_inline#snap_1.snap
---
source: tests/e2e/macro_expand/mod.rs
expression: report
snapshot_kind: text
---
source_contexts = '''
  <caret>  println!("some text");

    pr<caret>intln!("some text");

    println!<caret>("some text");
'''
expansion = '''
// lib.cairo
// ---------

{
    let mut __formatter_for_print_macros__: core::fmt::Formatter = core::traits::Default::default();
    core::result::ResultTrait::<
        (), core::fmt::Error,
    >::unwrap(
        {
            core::byte_array::ByteArrayTrait::append_word(
                ref __formatter_for_print_macros__.buffer, 0x736f6d6520746578740a, 10,
            );
            core::result::Result::<(), core::fmt::Error>::Ok(())
        },
    );
    core::debug::print_byte_array_as_string(@__formatter_for_print_macros__.buffer);
}'''
